--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,9 @@
+
+@import "leaflet/dist/leaflet.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 html, body, #root{
   height: 100%;
